syntax = "proto3";

package proto;

option go_package = "../proto";

service StudentService {
    rpc FindStudentByID(StudentByIDRequest) returns (StudentResponse){}
    rpc FindAllStudents(AllStudentsRequest) returns (StudentsResponse){}
}

message StudentByIDRequest {
    int64 id = 1;
}

message StudentResponse {
    int64 id = 1;
    string name = 2;
    int32 age = 3;
    int32 class = 4;
}

message AllStudentsRequest {
}

message StudentsResponse {
    repeated StudentResponse students = 1;
}
